<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">



    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_view"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_weight="10" />

            <TextView
                android:id="@+id/length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="25sp"
                android:gravity="center"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <Button
                    android:id="@+id/pick_img_bt"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorButton"
                    android:text="@string/image_bt_txt"/>
                <Switch
                    android:id="@+id/switch_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/image_swich_txt" />
                <Switch
                    android:id="@+id/switch_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/black_bg_switch_txt" />
                <Switch
                    android:id="@+id/switch_curve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/curve_switch_txt" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/width_label_txt"/>
                <SeekBar
                    android:id="@+id/seek_width"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:max="1500"
                    android:progress="460"/>
                <TextView
                    android:id="@+id/view_width"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="480"/>
                <ImageButton
                    android:id="@+id/default_width_bt"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:src="@mipmap/reset"
                    android:layout_marginStart="5dp" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/select_curve_pt_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorButton"
                    android:text="@string/curve_point_bt_txt"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tol_label_txt"/>
                <SeekBar
                    android:id="@+id/seekTolerance"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:max="25"
                    android:progress="15"/>
            </LinearLayout>



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="10dp"
                android:background="@color/colorBar"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/lines_label_txt"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="5dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_label_txt"/>
                <SeekBar
                    android:id="@+id/seek_nb_lines"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:max="10"
                    android:progress="2"
                    />
                <TextView
                    android:id="@+id/view_lines_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Switch
                    android:id="@+id/switch_lines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/angle_label_txt" />
                <SeekBar
                    android:id="@+id/seek_angle_lines"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:max="10"
                    android:progress="2"
                    />
                <TextView
                    android:id="@+id/view_lines_angle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"/>
            </LinearLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="10dp"
                android:background="@color/colorBar"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Switch
                    android:id="@+id/switch_dots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:checked="true"
                    android:text="@string/dots_switch_txt"/>
                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <RadioButton
                        android:id="@+id/radio_add_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_radio_txt"/>
                    <RadioButton
                        android:id="@+id/radio_none_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/none_radio_txt"/>
                    <RadioButton
                        android:id="@+id/radio_suppr_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suppr_radio_txt"/>
                </RadioGroup>
                <ImageButton
                    android:id="@+id/suppr_all_dots"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/suppr_all_dots"/>
                <ImageButton
                    android:id="@+id/auto_dots_bt"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/auto_dots"/>
            </LinearLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="10dp"
                android:background="@color/colorBar"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Switch
                    android:id="@+id/switch_ref"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ref_switch_txt"/>
                <Button
                    android:id="@+id/length_ref_begin_bt"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:textSize="10sp"
                    android:textColor="@color/colorButton"
                    android:text="@string/start_ref_bt_txt"/>
                <Button
                    android:id="@+id/length_ref_end_bt"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:textSize="10sp"
                    android:textColor="@color/colorButton"
                    android:text="@string/end_ref_bt_txt"/>
                <EditText
                    android:id="@+id/editTextRefLenght"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/ref_lenght_label_txt"/>
                <EditText
                    android:id="@+id/editTextRefUnit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/unit_text_edit_hint" />
                <ImageButton
                    android:id="@+id/keyboard_down_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/keyboard_down"/>
            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>
    </ScrollView>




</android.support.constraint.ConstraintLayout>